fix: lottie img + tooltip cutoff (#193)
closes #167.
closes #185

--- a/src/components/styles/Carousel.scss
+++ b/src/components/styles/Carousel.scss
@@ -77,13 +77,15 @@ b {
 .util-left-btn-container {
   display: flex;
   justify-content: flex-start;
+  padding-left: 25px;
   width: 50%;
 }
 
 .util-right-btn-container {
   display: flex;
   justify-content: flex-end;
-  width: 100%;
+  padding-right: 25px;
+  width: 50%;
 }
 
 .util-button {
